# jsonfold

./: .gitignore  1.txt  3.txt  CHANGES.md  Makefile  README.md  ROADMAP.md  TODO.md  development.md  t1000.json
articles/: 01-python.md  02-javascript.md  03-perl.md  jsonfold.py  skeleton.md  toc.md
c/: .gitignore  Makefile  benchmark.c  cli.c  gen_cli.c  generated.c  jsonfold.c  jsonfold.c.try-1  jsonfold.c.try-2  jsonfold.h  run.sh  run_benchmark.sh
docs/: CNAME  app.js  index.html  jsonfold.js  privacy.html  skeleton.md  style.css
dotnet/: BUILDING.md  JsonFold.sln  Makefile  README.md  run.sh
go/: Makefile  README.md  go.mod
java/: .gitignore  Makefile  README.md  makefile.dev  pom.xml  run.sh
javasciprt/: cli.js  jsonfold.js  package.json
javascirpt/: cli.js  jsonfoldstream.js
javascript/: Makefile  README.md  api_test.js  bench-v0.1.0.txt  bench-v0.1.4.txt  benchmark.js  cli.js  jsonfold  jsonfold.js  package-lock.json  package.json  run_benchmark.sh
lua/: Makefile  benchmark.lua  cli.lua  jsonfold-0.2.2-1.rockspec  jsonfold.lua
perl/: .gitignore  MANIFEST  Makefile.PL  makefile.dev  run_benchmark.sh  x.pl  zz
python/: .gitignore  1  1.1  2  3  Makefile  README.md  SPEC.md  api_test.py  bench-v0.1.1.txt  bench-v0.1.2.txt  bench-v0.1.4.txt  benchmark.json  benchmark.py  cli.py  f.json  jsonfold.new  jsonfold.py  jsonfold_cli.py  m.json  n.json  new.py  p.json  pyproject.toml  run_benchmark.sh  small.json  t2.json  test-preset-1.py  with_length.py  x.json  z.json
python/1/: bad.py  bench-v0.1.0.txt  bench-v0.1.3.txt  benchmark.py  jsonfold.py
(+582 files in other folders)
